--- a/report/report.Rmd
+++ b/report/report.Rmd
@@ -14,69 +14,82 @@ library(xtable)
 
 #Abstract
   
-In this report, I will reproduce the main results displayed in section 3.1 *Simple Linear Regression* (chapter3) of the book __An introduction to Statistical Learning.__
+In this report, I will reproduce the main results displayed in section 3.1 *Simple Linear Regression* (chapter3) of the book __An introduction to Statistical Learning.__ descirbed below : 
+
+- Figure 3.1 (page 62) Scatterplot with fitted regression line (the vertical distances of each point to the line are optional).  
+- Table 3.1 (page 68) Summary of regression coefficients.  
+- Table 3.2 (page 69) Quality indices RSE, R square, and F-statistic.  
 
 
 
 #Introduction 
 
-The overall goal is to provide advice on how to improve sales of the particular product. More specifically,
-the idea is to determine whether there is an association between TV advertising and sales, and if so, develop an accurate model that can be used to predict sales on the basis of the TV advertising budgets.  
+The goal of this homework is to reproduce the results of Explanatory Data Analysis on TV advertising budget and Sales and see if there is a assoication between them. If so, using linear regression we will see how they are correlated and how accurate model that can be used to predict sales based on the TV advertising budgets.
 
 
 #Data
 
-The Advertising data set consists of the Sales (in thousands of units) of a particular product in 200 different markets, along with advertising budgets (in thousands of dollars) for the product in each of those markets for three different media: TV, Radio, and Newspaper.
+Data set consists of the Sales(in thousand of units) of a certain products in 200 different markets, and the advertising budgets of 3 differnet media: TV, Radio, and Newspaper (4 variabales and 200 observations.) Since we are focusing on the TV and Sales, first we need to extract the data and applying the simple linear regression. 
 
 
 
 #Methodology
 
-We consider one media from the data set, TV, and study its relationship with Sales. For this purpose, we use
-a simple linear model:  
+I will apply a simple linear regression model to see the linear relationship between TV advertising budgets and the Sales:
 
 $$\\Sales = \beta_{0} + \beta_{1}TV$$ 
 
-To estimate the coefficients $\beta_{0}$ and $\beta_{1}$ we fit a regression model via the least squares criterion.
+To estimate the coefficients $\beta_{0}$ and $\beta_{1}$ we fit a regression model via the least squares criterion (Best Linear Prediction method).
 
 
 
 #Results
 
-We compute the regression coefficients
+The regression coefficients are discribed below in a table:
 
 ```{r echo = FALSE, results='asis'}
 load("../data/regression.Rdata")
-sum_table = xtable(sum_reg$coefficient, caption="Information about Regression Coefficients")
+sum_table = xtable(sum_reg$coefficient,  digits = 4, caption="Information about Regression Coefficients")
 print(sum_table, comment=FALSE, type = "latex")
 ```
 
 
--Under the null hyopthesis, p-value of intercept is significant to reject the null. The estimate of the intercept is `r sum_reg$coefficients[1,1]` with sd `r sum_reg$coefficients[1,2]`
 
--Under the null hyopthesis, p-value of slope is significant to reject the null. The estimate of the slope is `r sum_reg$coefficients[1,2]` with `r sum_reg$coefficients[2,2]`
+- Under the null hyopthesis, p-value of intercept is significant to reject the null. The estimate of the intercept is `r sum_reg$coefficients[1,1]` with sd of `r sum_reg$coefficients[1,2]`
+- Under the null hyopthesis, p-value of slope is significant to reject the null. The estimate of the slope is `r sum_reg$coefficients[1,2]` with sd of `r sum_reg$coefficients[2,2]`
 
 
-More information about the least squares model is given in the table below:  
+Quality indices RSE, R square, and F-statistic are given in the table below:  
 
 
 ```{r echo = FALSE, results='asis'}
 ind = data.frame(Quantity=c("R2","RSE","F-stat"), Value = c(sum_reg$r.squared,sum_reg$sigma,sum_reg$fstatistic[1]))
-indice_table = xtable(ind, caption = "Regression Quality Indices")
+indice_table = xtable(ind, digits = 4, caption = "Regression Quality Indices")
 print(indice_table, comment=FALSE, type="latex")
 ```
 
-
-
-```{r}
-    
-
-
-```
+- R sqaure is the percent of variation that can be explained by the regression equation. It means that about `r sum_reg$r.squared*100` precent of variations in sales can be explained by the regression equation.
+- Residual Standard Error refers the estimated standard error of residuals. It measures the distance between the data point and the regression equation. Here, RSE is `r sum_reg$sigma` on 198 degrees of freedom.
+- In simple linear regression, null hypothesis of F-test is 'slope equals to zero.' Here, F-statistics is `r sum_reg$fstatistic[1]` and p-value of F-statistics is significant to reject the null.
 
 
 
-![scatterplot-tv-sales](../images/scatterplot-tv-sales.png)
+
+\begin{figure}[!h]
+  \begin{center}
+    \caption{Scatterplot with fitted regression line}
+    \centering
+      \includegraphics[width=4in]{../images/scatterplot-tv-sales.png}
+  \end{center}
+\end{figure}
+
 
 
 #Conclusions
+
+- According to the Table 2, F-statistics indicates to reject the null hypothesis, $H_0 : \beta_{1} = 0$. Therefore, there is a linear relationship between `TV advertising budgets` and `Sales.` 
+- It is the same result when we test with the correlation coefficient presented in Table1. 
+- In the plot, it seems that there are slightly more variations at both ends. However, the data shows pretty good linear relationship between TV advertising and the Sales. 
+- 1000 standard unit increase in TV advertising, increases 47 standard units in sales
+- Thus, it is safe to conclude that there is a linear relationship between them. 
+
